Fixed Navbar on Tablets

--- a/stylesheets/legal.css
+++ b/stylesheets/legal.css
@@ -92,6 +92,25 @@ Add the correct text decoration in Chrome, Edge, and Safari.
 abbr:where([title]) {
   text-decoration: underline dotted;
 }
+
+.escape-span {
+  display: none;
+}
+
+/* Media query for larger screens */
+@media (min-width: 857px) {
+  .escape-span {
+    display: inline;
+  }
+
+ 
+}
+
+@media(max-width: 709px){
+  .desktop-nav-link span{
+    display: none;
+  }
+}
 /*
 Remove the default font size and weight for headings.
 */
