--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1058,6 +1058,18 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media (min-width: 857px) {
+  .escape-span {
+    display: inline;
+  }
+}
+
+@media(max-width: 709px){
+  .desktop-nav-link span{
+    display: none;
+  }
+}
+
 body {
   transition: background-color 0.3s, color 0.3s;
 }
